# binaps_explore

./: .gitignore  Dockerfile  Dockerfile_exp  README  pyproject.toml  readme.md  requirements.txt  run_binaps.py
Binaps_code/: dataLoader.py  main.py  my_layers.py  my_loss.py  network.py  start.py
analyse/: Untitled.ipynb
github_explore/: explore.ipynb  github_dl.py  github_dl_json.py  ovhai_laucher.sh  repos_name.txt  sizeof.py
