[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Thibaut Chataing <tchataing@palo-it.com>"]

[tool.poetry.dependencies]
python = "3.9"
pandas = "*"
tqdm = "*"
jupyterlab = "*"
scikit-learn = "*"
numpy = "*"
scipy = "*"
matplotlib = "*"
ipython = "*"
sympy = "*"
torch = "*"
torchvision = "*"
pandas-profiling = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
